--- a/app/src/main/res/layout/fragment_cadastro.xml
+++ b/app/src/main/res/layout/fragment_cadastro.xml
@@ -21,12 +21,12 @@
             android:layout_marginLeft="148dp"
             android:layout_marginRight="148dp"
             android:layout_marginStart="148dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:text="Ver Minha Localização"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.915"
+            app:layout_constraintHorizontal_bias="0.495"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageViewFoto" />
+            app:layout_constraintTop_toBottomOf="@+id/frameImagens" />
 
         <Spinner
             android:id="@+id/SpinnerMaterial"
@@ -41,6 +41,30 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <FrameLayout
+            android:id="@+id/frameImagens"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@+id/descricaoCadastro"
+            tools:layout_editor_absoluteX="16dp">
+
+            <ImageView
+                android:id="@+id/imageViewFoto"
+                android:layout_width="136dp"
+                android:layout_height="119dp"
+                android:layout_marginEnd="120dp"
+                android:layout_marginLeft="120dp"
+                android:layout_marginRight="120dp"
+                android:layout_marginStart="120dp"
+                android:layout_marginTop="10dp"
+                android:src="@mipmap/ic_lixeira"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/descricaoCadastro" />
+        </FrameLayout>
+
         <EditText
             android:id="@+id/descricaoCadastro"
             android:layout_width="301dp"
@@ -49,7 +73,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="20dp"
             android:hint="Descrição Material"
             android:padding="20dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -61,21 +85,22 @@
             android:id="@+id/btnCadastrar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp"
             android:layout_marginEnd="148dp"
             android:layout_marginLeft="148dp"
             android:layout_marginRight="148dp"
             android:layout_marginStart="148dp"
+            android:layout_marginTop="72dp"
             android:text="Cadastrar"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintHorizontal_bias="0.47"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btnLocalizacao" />
 
         <TextView
             android:id="@+id/textCidade"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp"
+            android:layout_marginBottom="10dp"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
             android:text="Cidade"
@@ -86,7 +111,7 @@
             android:id="@+id/textEstado"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp"
+            android:layout_marginBottom="10dp"
             android:layout_marginLeft="30dp"
             android:layout_marginStart="30dp"
             android:text="Estado"
@@ -97,7 +122,7 @@
             android:id="@+id/textPais"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp"
+            android:layout_marginBottom="10dp"
             android:layout_marginLeft="30dp"
             android:layout_marginStart="30dp"
             android:text="País"
@@ -125,21 +150,6 @@
             android:text="Longitude"
             app:layout_constraintBottom_toTopOf="@+id/textEstado"
             app:layout_constraintStart_toEndOf="@+id/textLatitude" />
-
-        <ImageView
-            android:id="@+id/imageViewFoto"
-            android:layout_width="136dp"
-            android:layout_height="119dp"
-            android:layout_marginEnd="120dp"
-            android:layout_marginLeft="120dp"
-            android:layout_marginRight="120dp"
-            android:layout_marginStart="120dp"
-            android:layout_marginTop="24dp"
-            android:src="@mipmap/ic_lixeira"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/descricaoCadastro" />
 
 
     </android.support.constraint.ConstraintLayout>
