--- a/app/src/main/res/layout/fragment_lista_residuos.xml
+++ b/app/src/main/res/layout/fragment_lista_residuos.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragmento.ListaFrag">
+    tools:context=".fragmento.ListaResiduosFrag">
 
     <!-- TODO: Update blank fragment layout -->
 
