--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -1,39 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".activity.DetailsActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="72dp">
+        android:layout_height="40dp">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="55dp"
             app:contentScrim="@color/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:toolbarId="@+id/toolbar">
 
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
+            <TextView
+                android:id="@+id/textTitulo"
                 android:layout_width="match_parent"
-                android:layout_height="@color/colorPrimary"></android.support.v7.widget.Toolbar>
+                android:layout_height="wrap_content"
+                android:layout_margin="12dp"
+                android:text="TextView"
+                android:textAppearance="@android:style/TextAppearance.Material.Title"
+                app:layout_anchor="@+id/appbar"
+                app:layout_anchorGravity="left|center" />
 
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
+    <ImageView
+        android:id="@+id/imageDetalheResiduo"
+        android:layout_width="match_parent"
+        android:layout_height="95dp"
+        app:srcCompat="@android:drawable/sym_def_app_icon" />
+
     <TextView
-        android:id="@+id/textTitulo"
+        android:id="@+id/textSubTitulo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="TextView"
-        android:textAppearance="@android:style/TextAppearance.Material.Title"
-        android:layout_margin="12dp"
-        app:layout_anchor="@+id/appbar"
-        app:layout_anchorGravity="left|center" />
+        android:textAlignment="center"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
-</android.support.design.widget.CoordinatorLayout>
+    <TextView
+        android:id="@+id/textViewConteudo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:textAlignment="center" />
+
+
+</LinearLayout>
