--- a/app/src/main/res/layout/fragment_lista_descarte.xml
+++ b/app/src/main/res/layout/fragment_lista_descarte.xml
@@ -25,6 +25,6 @@
         android:onClick="chamaCadastro"
         android:src="@android:drawable/ic_menu_add"
         android:backgroundTint="@color/colorAccent"
-        android:layout_gravity="bottom|end"/>
+        android:layout_gravity="center_vertical|end"/>
 
 </FrameLayout>
